# swagger.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Painters",
-    "description": "Famous artists of various disciplines",
+    "title": "Painters' Corner",
+    "description": "Classes, supplies, and customer information.",
     "version": "1.0.0"
   },
   "host": "painters-ui6d.onrender.com",
@@ -18,9 +18,9 @@
         "responses": {}
       }
     },
-    "/painters/": {
+    "/customers/": {
       "get": {
-        "description": "Get all artists",
+        "description": "Get all customers",
         "produces": [
           "application/json"
         ],
@@ -32,7 +32,7 @@
         }
       },
       "post": {
-        "description": "Add a new artist",
+        "description": "Add a new customer",
         "parameters": [
           {
             "name": "body",
@@ -44,16 +44,18 @@
                   "example": "any"},
                 "lastName": {
                   "example": "any"},
-                "birthPlace": {
+                "address": {
                   "example": "any"},
                 "birthDate": {
                   "example": "any"},
-                "nationality": {
+                "email": {
                   "example": "any"},
-                "education": {
+                "classesTaken": {
                   "example": "any"},
-                "movements": {
-                  "example": "any"}
+                "ordersPlaced": {
+                  "example": "any"},
+                "subscribed": {
+                    "example": "any"}
               }
             }
           }
@@ -68,9 +70,9 @@
         }
       }
     },
-    "/painters/{id}": {
+    "/customers/{id}": {
       "get": {
-        "description": "Get painter by id",
+        "description": "Get customer by id",
         "produces": [
           "application/json"
         ],
@@ -95,31 +97,27 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-          "name": "body",
-          "in": "body",
-          "schema": {
-            "type": "object",
-            "properties": {
-              "firstName": {
-                "example": "any"},
-              "lastName": {
-                "example": "any"},
-              "birthPlace": {
-                "example": "any"},
-              "birthDate": {
-                "example": "any"},
-              "nationality": {
-                "example": "any"},
-              "education": {
-                "example": "any"},
-              "movements": {
-                "example": "any"}
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "any"},
+                "lastName": {
+                  "example": "any"},
+                "address": {
+                  "example": "any"},
+                "birthDate": {
+                  "example": "any"},
+                "email": {
+                  "example": "any"},
+                "classesTaken": {
+                  "example": "any"},
+                "ordersPlaced": {
+                  "example": "any"},
+                "subscribed": {
+                    "example": "any"}
               }
             }
           }
@@ -134,7 +132,7 @@
         }
       },
       "delete": {
-        "description": "Delete an artist by id",
+        "description": "Delete a customer by id",
         "parameters": [
           {
             "name": "id",
